# =============================================================================
#  R E P S   ·   gc-lang
# =============================================================================
[package]
name    = "gc-lang"
version = "1.0.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Garbage collector for interpreted-language runtimes."

# Keywords (5 max)
keywords = ["language", "runtime", "gc", "garbage-collector", "memory"]

# Categories
categories = ["development-tools", "memory-management", "no-std"]

# Links
homepage      = "https://github.com/jamesgober/gc-lang"
repository    = "https://github.com/jamesgober/gc-lang"
documentation = "https://docs.rs/gc-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "gc_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# The `std` feature links the standard library. With it off the crate is
# `no_std` and needs only `alloc`; nothing else in the public surface changes.
std = []


# DEPENDENCIES
# #################################
# gc-lang has no runtime dependencies. The collector is a self-contained,
# handle-based mark-and-sweep heap built on `alloc` alone.
[dependencies]


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
